AC_INIT([helloworld], [1.0], [bug-report@address])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_PROG_CC
# AC_PROG_CXX
# AC_LANG([C++])

AC_CONFIG_FILES([Makefile])

CFLAGS+=" -Werror -Wall -Wformat=2 -Wcast-qual -Wwrite-strings"
# CXXFLAGS+=" -Werror -Wall -Wformat=2 -Wcast-qual -Wwrite-strings"

AC_OUTPUT
